Sends songId to player fragment as parameter.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,5 +19,8 @@
         android:name="com.hftor.plyr.PlayerFragment"
         android:label="fragment_player"
         tools:layout="@layout/fragment_player">
+        <argument
+            android:name="songId"
+            app:argType="long" />
     </fragment>
 </navigation>
